--- a/pkg/java/pom/testdata/multi-module/module/pom.xml
+++ b/pkg/java/pom/testdata/multi-module/module/pom.xml
@@ -17,15 +17,11 @@
         </license>
     </licenses>
 
-    <properties>
-        <api.version>1.7.30</api.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>example-api</artifactId>
-            <version>${api.version}</version>
+            <artifactId>example-dependency</artifactId>
+            <version>1.2.3</version>
         </dependency>
     </dependencies>
 </project>
